<resources>
    <string name="app_name">Coffee Viz Beer</string>
    <string name="app_subtitle">Stories unmatched</string>
    <string name="app_made_by">Qurux\nAman Kapoor</string>
    <string name="app_made_by_person">Aman Kapoor</string>
    <string name="desc_cvb_logo">Coffee viz Beer Logo</string>
    <string name="content_authority">com.qurux.coffeevizbeer.app</string>
    <string name="default_loading_text">I am loading</string>
    <string name="error_firebase_failed">Authentication failed.</string>
    <string name="error_play_service">Google Play Services error.</string>
    <string name="error_google_signin">Google Sign In failed</string>
    <string name="title_activity_home">Home</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">READ MORE</string>
    <string name="desc_share_button">Share Button</string>
    <string name="desc_bookmark_button">Bookmark Button</string>
    <string name="desc_like_button">Like Button</string>
    <string name="title_activity_detail">Detail</string>
    <string name="search_hint">Search a public post</string>
    <string name="search_hint_bookmark">Search a bookmarked post</string>
    <string name="search_hint_about">Search your post</string>
    <string name="new_post_hint_text">A story can be of anything which you thought is not a match but still it was. It could be a story of you and your crush or maybe a new food or drink combination you made last night which tastes awesome. Feel free to write anything. Add photos and text below.</string>
    <string name="post_title_hint_this">This</string>
    <string name="post_title_hint_that">That</string>
    <string name="remove">(Public/Anonymous)</string>
    <string name="hint_post_summary">Add a 160 or less words summary. Write something that attracts others to read your story. You can add complete detail below.</string>
    <string name="add_description">ADD DESCRIPTION</string>
    <string name="button_submit">Post your vizo</string>
    <string name="viz" translatable="false">viz</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3437446276278564/4323364735</string>
    <string name="ad_app_id" translatable="false">ca-app-pub-3437446276278564~7416431938</string>
    <string name="click_a_photo">Click</string>
    <string name="choose_an_avatar">Avatar</string>
    <string name="choose_from_gallery">Gallery</string>
    <string name="allow_camera">You need to allow camera usage.\nYou can update permission manually from Appinfo.</string>
    <string name="allow_storage">You need to allow storage usage.\nYou can update permission manually from Appinfo.</string>
    <string name="camera_perm_denied">You did not allow camera usage :(</string>
    <string name="hint_long_description">Write some long description</string>
    <string name="regex_local" translatable="false">Local:avatar[0-9]{1,2}</string>
    <string name="firebase_storage_link" translatable="false">gs://coffee-viz-beer-da0f5.appspot.com</string>
    <string name="desc_avatars">Avatars</string>
    <string name="avatar_local_link_start" translatable="false">Local:avatar%d</string>
    <string name="error_title_space">Only single lined without space</string>
    <string name="error_title_min">Min 3</string>
    <string name="error_summary_min">Summary must be atleast 20 characters long</string>
    <string name="error_photos_set">Photos must be set</string>
    <string name="error_no_internet">My world seems to be disconnected to internet</string>
    <string name="error_no_posts">I feel alone here\nAdd Something</string>
    <string name="error_user_loading">I am still looking for you in my server</string>
    <string name="error_unknown">Something happened which even i don\'t know</string>
    <string name="send_to_title">Share the vizo</string>
    <string name="desc_search">Search</string>
    <string name="appwidget_text">Coffee Viz Beer</string>
    <string name="add_widget">Add widget</string>
    <string name="desc_widget_refresh">CVB Widget Refresh</string>
    <string name="widget_please_login">Please Login to CvB</string>
    <string name="desc_remove_button">Go Anonymous</string>
    <string name="select_a_vizo">Click on Read More on a vizo to enjoy Coffee with Beer</string>

</resources>
