<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.qurux.coffeevizbeer.ui.DetailActivity"
    tools:showIn="@layout/fragment_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:paddingBottom="@dimen/text_margin_half"
            android:paddingTop="@dimen/text_margin_half">

            <TextView
                android:id="@+id/post_item_author"
                style="@style/textViewWithDefaultMargin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:drawablePadding="@dimen/text_margin_half"
                android:textColor="@color/colorTextGreyLight"
                android:textSize="@dimen/textSize_normal" />

            <ImageButton
                android:id="@+id/button_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/desc_share_button"
                app:srcCompat="@drawable/ic_vector_share" />

            <ImageButton
                android:id="@+id/button_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_margin_half"
                android:layout_marginRight="@dimen/text_margin_half"
                android:layout_toLeftOf="@id/button_share"
                android:layout_toStartOf="@id/button_share"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/desc_bookmark_button"
                app:srcCompat="@drawable/ic_vector_bookmark_black" />

            <ImageButton
                android:id="@+id/button_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_margin_half"
                android:layout_marginRight="@dimen/text_margin_half"
                android:layout_toLeftOf="@id/button_bookmark"
                android:layout_toStartOf="@id/button_bookmark"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/desc_like_button"
                app:srcCompat="@drawable/ic_vector_like" />
        </RelativeLayout>

        <TextView
            android:id="@+id/post_item_description"
            style="@style/textViewWithDefaultMargin"
            android:layout_marginBottom="@dimen/text_margin_half"
            android:layout_marginTop="@dimen/text_margin_half"
            android:text="@string/large_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_normal" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
