<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/text_margin_half"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <com.qurux.coffeevizbeer.helper.ThisThatView
        android:id="@+id/this_that_view_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/post_this_that_image_height"
        android:background="@color/colorTextGrey"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/post_item_title"
        style="@style/textViewWithPadding"
        android:background="@color/colorTextGrey"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSize_large" />

    <!--Set user icon drawable to left to text programmatically because of vector icon using support library-->
    <TextView
        android:id="@+id/post_item_author"
        style="@style/textViewWithDefaultMargin"
        android:layout_marginTop="@dimen/keyline_margin"
        android:drawablePadding="@dimen/text_margin_half"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSize_normal" />

    <TextView
        android:id="@+id/post_item_summary"
        style="@style/textViewWithDefaultMargin"
        android:layout_marginBottom="@dimen/text_margin_half"
        android:layout_marginTop="@dimen/keyline_margin"
        android:textSize="@dimen/textSize_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorBackground" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_half"
        android:layout_marginTop="@dimen/text_margin_half">

        <TextView
            android:id="@+id/post_item_read_more"
            style="@style/textViewWithDefaultMargin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/read_more"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textSize_normal" />

        <ImageButton
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/desc_share_button"
            app:srcCompat="@drawable/ic_vector_share" />

        <ImageButton
            android:id="@+id/button_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin_half"
            android:layout_marginRight="@dimen/text_margin_half"
            android:layout_toLeftOf="@id/button_share"
            android:layout_toStartOf="@id/button_share"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/desc_bookmark_button"
            app:srcCompat="@drawable/ic_vector_bookmark_black" />

        <ImageButton
            android:id="@+id/button_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin_half"
            android:layout_marginRight="@dimen/text_margin_half"
            android:layout_toLeftOf="@id/button_bookmark"
            android:layout_toStartOf="@id/button_bookmark"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/desc_like_button"
            app:srcCompat="@drawable/ic_vector_like" />
    </RelativeLayout>

</LinearLayout>